@@ -322,9 +322,6 @@ public class Expression
         if (!hasLower())
             return true;
 
-        if (nonMatchingPartial(term))
-            return false;
-
         int cmp = term.compareTo(validator, lower.value, false);
         return cmp > 0 || cmp == 0 && lower.inclusive;
     }
@@ -333,9 +330,6 @@ public class Expression
     {
         if (!hasUpper())
             return true;
-
-        if (nonMatchingPartial(term))
-            return false;
 
         int cmp = term.compareTo(validator, upper.value, false);
         return cmp < 0 || cmp == 0 && upper.inclusive;
@@ -383,11 +377,6 @@ public class Expression
                 && Objects.equals(lower, o.lower)
                 && Objects.equals(upper, o.upper)
                 && exclusions.equals(o.exclusions);
-    }
-
-    private boolean nonMatchingPartial(OnDiskIndex.DataTerm term)
-    {
-        return term.isPartial() && operation == Op.PREFIX;
     }
 
     public static class Bound
